--- a/Hammond-SPA/src/app/assignments/assignment-item/assignment-detail/assignment-detail.component.html
+++ b/Hammond-SPA/src/app/assignments/assignment-item/assignment-detail/assignment-detail.component.html
@@ -5,7 +5,7 @@
   <p>
     {{assignment.content}}
   </p>
-  <div *ngIf="user" class="card message-component">
+  <div *ngIf="user && operatingRole !== 'Admin'" class="card message-component">
     <div class="card-body">
       <div *ngIf="messages?.length === 0">
         <p>Discuss this assignment:</p>
