--- a/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
@@ -1,3 +1,100 @@
-<p>
-  assignment-edit works!
-</p>
+<form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
+  <h4>Description</h4>
+  <textarea name="introduction" rows="6" class="form-control" 
+  [(ngModel)]="user.introduction"></textarea>
+  <h4>Looking For</h4>
+  <textarea name="lookingFor" rows="6" class="form-control" 
+  [(ngModel)]="user.lookingFor"></textarea>
+  <h4>Interests</h4>
+  <textarea name="interests" rows="6" class="form-control" 
+  [(ngModel)]="user.interests"></textarea>
+  <h4>Location Details:</h4>
+  <div class="form-inline">
+    <label for="city">City</label>
+    <input class="form-control" type="text" name="city" [(ngModel)]="user.city">
+    <label for="city">Country</label>
+    <input class="form-control" type="text" name="country" [(ngModel)]="user.country">
+  </div>
+</form>
+
+<form #editForm="ngForm" (ngSubmit)="updateAssignment()">
+    
+  <div class="form-group">
+    <input type="text"
+      [ngClass]="{'is-invalid': registerForm.get('title').errors
+      && registerForm.get('title').touched}"
+      class="form-control"
+      formControlName="title"
+      placeholder="Assignment Title">
+
+      <div class="invalid-feedback">Please enter title</div>
+  </div>
+
+  <div class="form-group">
+    <textarea type="textarea"
+      [ngClass]="{'is-invalid': registerForm.get('content').errors
+      && registerForm.get('content').touched}"
+      class="form-control"
+      [(ngModel)]=""
+      formControlName="content"
+      placeholder="Assignment Description"
+      rows="4"
+      cols="50"></textarea>
+
+      <div class="invalid-feedback">Please enter content</div>
+  </div>
+
+  
+
+  <div class="form-group col-md-5">
+    <label class="control-label" style="margin-right:10px">Grade:  </label>
+    <br>
+    <label class="radio-inline">  
+      <input class="mr-1 ml-2" type="radio" value="sophomore" formControlName="studentLevel">Sophomore  
+    </label>
+    <br>  
+    <label class="radio-inline ml-2">  
+      <input class="mr-1" type="radio" value="junior" formControlName="studentLevel">Junior  
+    </label>
+    <br>
+    <label class="radio-inline ml-2">  
+        <input class="mr-1" type="radio" value="senior" formControlName="studentLevel">Senior  
+    </label>
+  </div>
+
+  <div class="form-group col-md-5">
+    <label class="control-label" style="margin-right:10px">Section:  </label>
+    <br>
+    <label class="radio-inline">  
+      <input class="mr-1 ml-2" type="radio" value="mentor" formControlName="section">Mentoring  
+    </label>
+    <br>  
+    <label class="radio-inline ml-2">  
+      <input class="mr-1" type="radio" value="tutor" formControlName="section">Tutoring  
+    </label>
+  </div>
+
+  <div class="form-group">
+    <input [ngClass]="{'is-invalid': registerForm.get('dateDue').errors
+      && registerForm.get('dateDue').touched}" class="form-control"
+      placeholder="Date Due" formControlName="dateDue" type="text" bsDatepicker>
+      <div class="invalid-feedback" *ngIf="registerForm.get('dateDue').touched
+        && registerForm.get('dateDue').hasError('required')">Due Date is required
+      </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="switch">
+      <input type="checkbox"
+      class="form-control"
+      formControlName="assigned">
+      <span class="slider round"></span>
+    </label>
+    Make Assignment Visable to Students
+  </div>
+
+  <div class="form-group text-center">
+    <button class="btn btn-success" type="submit" [disabled]="!registerForm.valid">Register</button>
+  </div>
+
+</form>
