--- a/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
@@ -20,8 +20,8 @@
   
       <tab heading="Assignments">
         <br>
-          <div *ngFor="let assignment of assignments" [routerLink]="['/admin/assignments']">
-            <div class="card row">
+          <div *ngFor="let assignment of assignments">
+            <div class="card row" [routerLink]="['/mentor/assignments']">
               <div class="container">
                 <div class="card-body">
                   <h4>{{assignment.title}}</h4>
