--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <i class="fa fa-arrow-circle-left" *ngIf="!showAssignmentDetail" [routerLink]="['/admin']"></i>
+  <div>{{operatingRole}}</div>
   <i class="fa fa-arrow-circle-left" *ngIf="showAssignmentDetail" (click)="assignmentDetailClick()"></i>
   <form *ngIf="!showAssignmentDetail" class="form-inline" #form="ngForm" (ngSubmit)="loadAssignments()" novalidate>
     <div class="form-group px-2">
