--- a/Hammond-SPA/src/app/assignments/assignment-item/assignment-detail/assignment-detail.component.html
+++ b/Hammond-SPA/src/app/assignments/assignment-item/assignment-detail/assignment-detail.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-3">
+  <i class="fa fa-arrow-circle-left" [routerLink]="['/', operatingRole]"></i>
   <h3>
     {{assignment.title}}
   </h3>
