--- a/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-list/assignment-list.component.html
@@ -30,10 +30,12 @@
         <div class="card-body"
       [routerLink]="['/admin/assignment', assignment.id]">
       <strong>{{assignment.title}}</strong>: 
-      {{assignment.dateDue | date: 'mediumDate'}}</div>
+      {{assignment.dateDue | date: 'mediumDate'}}<i (click)="deleteAssignment(assignment.id)" class="fa fa-trash"></i></div> 
+      
     </div>
+    
       </div>
-      <div class="" *ngFor="let assignment of assignments" (click)="assignmentDetailClick(assignment)">
+      <!-- <div class="" *ngFor="let assignment of assignments" (click)="assignmentDetailClick(assignment)">
         <div class="user-item card mb-2">
           <div class="card-body">
             <h4>{{assignment.title}}</h4>
@@ -41,10 +43,10 @@
           </div>
         </div>
         
-    </div>
+    </div> -->
   </ng-container>
-  
-  <app-assignment-detail *ngIf="showAssignmentDetail"></app-assignment-detail>
+  <br>
+  <!-- <app-assignment-detail *ngIf="showAssignmentDetail"></app-assignment-detail> -->
 
       <div *ngIf="!showAssignmentDetail" class="d-flex justify-content-center">
         <pagination [boundaryLinks]="true"
