--- a/Hammond-SPA/src/app/messages/messages.component.html
+++ b/Hammond-SPA/src/app/messages/messages.component.html
@@ -28,8 +28,7 @@
         <th style="width: 20%"></th>
       </tr>
       <tr *ngFor="let message of messages" [routerLink]="['/users', 
-        messageContainer == 'Outbox' ? message.recipientId : message.senderId]"
-        [queryParams]="{tab: 3}">
+        messageContainer == 'Outbox' ? message.recipientId : message.senderId]">
         <td>{{message.content}}</td>
         <td>
           <div *ngIf="messageContainer != 'Outbox'">
