--- a/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
@@ -1,100 +1,111 @@
-<form #editForm="ngForm" id="editForm" (ngSubmit)="updateUser()">
-  <h4>Description</h4>
-  <textarea name="introduction" rows="6" class="form-control" 
-  [(ngModel)]="user.introduction"></textarea>
-  <h4>Looking For</h4>
-  <textarea name="lookingFor" rows="6" class="form-control" 
-  [(ngModel)]="user.lookingFor"></textarea>
-  <h4>Interests</h4>
-  <textarea name="interests" rows="6" class="form-control" 
-  [(ngModel)]="user.interests"></textarea>
-  <h4>Location Details:</h4>
-  <div class="form-inline">
-    <label for="city">City</label>
-    <input class="form-control" type="text" name="city" [(ngModel)]="user.city">
-    <label for="city">Country</label>
-    <input class="form-control" type="text" name="country" [(ngModel)]="user.country">
-  </div>
-</form>
+<div class="container">
+  <i class="fa fa-arrow-circle-left"></i>
+  <p>Assignment Registration</p>
 
-<form #editForm="ngForm" (ngSubmit)="updateAssignment()">
+  <form [formGroup]="editForm" (ngSubmit)="edit()">
     
-  <div class="form-group">
-    <input type="text"
-      [ngClass]="{'is-invalid': registerForm.get('title').errors
-      && registerForm.get('title').touched}"
-      class="form-control"
-      formControlName="title"
-      placeholder="Assignment Title">
-
-      <div class="invalid-feedback">Please enter title</div>
-  </div>
-
-  <div class="form-group">
-    <textarea type="textarea"
-      [ngClass]="{'is-invalid': registerForm.get('content').errors
-      && registerForm.get('content').touched}"
-      class="form-control"
-      [(ngModel)]=""
-      formControlName="content"
-      placeholder="Assignment Description"
-      rows="4"
-      cols="50"></textarea>
-
-      <div class="invalid-feedback">Please enter content</div>
-  </div>
-
+    <div class="form-group">
+      <input type="text"
+        name="title"
+        [ngModel]="assignment.title"
+        class="form-control"
+        formControlName="title"
+        placeholder="Assignment Title">
   
+        <div class="invalid-feedback">Please enter title</div>
+    </div>
 
-  <div class="form-group col-md-5">
-    <label class="control-label" style="margin-right:10px">Grade:  </label>
-    <br>
-    <label class="radio-inline">  
-      <input class="mr-1 ml-2" type="radio" value="sophomore" formControlName="studentLevel">Sophomore  
-    </label>
-    <br>  
-    <label class="radio-inline ml-2">  
-      <input class="mr-1" type="radio" value="junior" formControlName="studentLevel">Junior  
-    </label>
-    <br>
-    <label class="radio-inline ml-2">  
-        <input class="mr-1" type="radio" value="senior" formControlName="studentLevel">Senior  
-    </label>
-  </div>
+    <div class="form-group">
+      <textarea type="textarea"
+        name="content"
+        [ngModel]="assignment.content"
+        [ngClass]="{'is-invalid': editForm.get('content').errors
+        && editForm.get('content').touched}"
+        class="form-control"
+        formControlName="content"
+        placeholder="Assignment Description"
+        rows="4"
+        cols="50"></textarea>
+  
+        <div class="invalid-feedback">Please enter content</div>
+    </div>
 
-  <div class="form-group col-md-5">
-    <label class="control-label" style="margin-right:10px">Section:  </label>
-    <br>
-    <label class="radio-inline">  
-      <input class="mr-1 ml-2" type="radio" value="mentor" formControlName="section">Mentoring  
-    </label>
-    <br>  
-    <label class="radio-inline ml-2">  
-      <input class="mr-1" type="radio" value="tutor" formControlName="section">Tutoring  
-    </label>
-  </div>
+    
 
-  <div class="form-group">
-    <input [ngClass]="{'is-invalid': registerForm.get('dateDue').errors
-      && registerForm.get('dateDue').touched}" class="form-control"
-      placeholder="Date Due" formControlName="dateDue" type="text" bsDatepicker>
-      <div class="invalid-feedback" *ngIf="registerForm.get('dateDue').touched
-        && registerForm.get('dateDue').hasError('required')">Due Date is required
-      </div>
-  </div>
+    <div class="form-group col-md-5">
+      <label class="control-label" style="margin-right:10px">Grade:  </label>
+      <br>
+      <label class="radio-inline">  
+        <input class="mr-1 ml-2" type="radio" value="sophomore" formControlName="studentLevel"
+        [checked]="assignment.studentLevel=='sophomore' ? true: false"
+        [ngModel]="assignment.studentLevel"
+        >Sophomore  
+      </label>
+      <br>  
+      <label class="radio-inline ml-2">  
+        <input class="mr-1" type="radio" value="junior" formControlName="studentLevel"
+        [checked]="assignment.studentLevel=='junior' ? true: false"
+        [ngModel]="assignment.studentLevel"
+        >Junior  
+      </label>
+      <br>
+      <label class="radio-inline ml-2">  
+          <input class="mr-1" type="radio" value="senior" formControlName="studentLevel"
+          [checked]="assignment.studentLevel=='senior' ? true: false"
+        [ngModel]="assignment.studentLevel"
+          >Senior  
+      </label>
+    </div>
 
-  <div class="form-group row">
-    <label class="switch">
-      <input type="checkbox"
-      class="form-control"
-      formControlName="assigned">
-      <span class="slider round"></span>
-    </label>
-    Make Assignment Visable to Students
-  </div>
+    <div class="form-group col-md-5">
+      <label class="control-label" style="margin-right:10px">Section:  </label>
+      <br>
+      <label class="radio-inline">  
+        <input class="mr-1 ml-2" type="radio" value="mentor" formControlName="section"
+        [checked]="assignment.section=='mentor' ? true: false"
+        [ngModel]="assignment.section"
+        >Mentoring  
+      </label>
+      <br>  
+      <label class="radio-inline ml-2">  
+        <input class="mr-1" type="radio" value="tutor" formControlName="section"
+        [checked]="assignment.section=='tutor' ? true: false"
+        [ngModel]="assignment.section"
+        >Tutoring  
+      </label>
+    </div>
 
-  <div class="form-group text-center">
-    <button class="btn btn-success" type="submit" [disabled]="!registerForm.valid">Register</button>
-  </div>
+    <div class="form-group">
+      <input [ngClass]="{'is-invalid': editForm.get('dateDue').errors
+        && editForm.get('dateDue').touched}" class="form-control"
+        [ngModel]="assignment.dateDue | date: 'shortDate'"
+        placeholder="Date Due"
+        formControlName="dateDue"
+        type="text"
+        bsDatepicker>
+        <div class="invalid-feedback" *ngIf="editForm.get('dateDue').touched
+	        && editForm.get('dateDue').hasError('required')">Due Date is required
+	      </div>
+    </div>
 
-</form>
+    <div class="form-group row">
+      <label class="switch">
+        <input type="checkbox"
+        [checked]="assignment.assigned ? true: false"
+        [ngModel]="assignment.assigned"
+        class="form-control"
+        formControlName="assigned">
+        <span class="slider round"></span>
+      </label>
+      Make Assignment Visable to Students
+    </div>
+
+    <div class="form-group text-center">
+      <button class="btn btn-success" type="submit" [disabled]="!editForm.valid">Update</button>
+    </div>
+
+  </form>
+</div>
+
+<p>{{editForm.value | json}}</p>
+<p>{{editForm.status | json}}</p>
