--- a/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
+++ b/Hammond-SPA/src/app/admin/groups-list/groups-list.component.html
@@ -11,10 +11,15 @@
           </option>
         </select>            
     </div>
-    <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filter</button>
-    <!-- <button type="button" class="btn btn-info" (click)="resetFilter()" style="margin-left:10px">
+    <div class="form-group">
+      <label for="itemsPerPage">Entires Per Page: </label>
+      <input type="number" class="form-control ml-1" style="width: 70px" id="itemsPerPage"
+      [(ngModel)]="pagination.itemsPerPage" name="itemsPerPage">
+    </div>
+    <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
+    <button type="button" class="btn btn-info" (click)="resetFilter()" style="margin-left:10px">
       Reset Filter
-    </button> -->
+    </button>
   </form>
 <div class="container">
     <div class="mt-2" *ngFor="let group of groups">
@@ -29,6 +34,16 @@
             <button class="btn btn-primary" (click)="disbandGroup(group.id)">Disband Group</button>
         </div>
         
+    </div>
+
+    <div class="d-flex justify-content-center">
+      <pagination [boundaryLinks]="true"
+                  [totalItems]="pagination.totalItems"
+                  [itemsPerPage]="pagination.itemsPerPage"
+                  [(ngModel)]="pagination.currentPage"
+                  (pageChanged)="pageChanged($event)"
+              previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"> 
+      </pagination>
     </div>
     
 </div>
