removed autocomplete from messages

--- a/Hammond-SPA/src/app/users/user-messages/user-messages.component.html
+++ b/Hammond-SPA/src/app/users/user-messages/user-messages.component.html
@@ -47,6 +47,7 @@
       <div class="input-group">
         <textarea type="textarea"
         [(ngModel)]="newMessage.content"
+        autocomplete="off"
         name="content"
         required
         class="form-control input-sm"
