--- a/Hammond-SPA/src/app/assignments/assignment-item/assignment-detail/assignment-detail.component.html
+++ b/Hammond-SPA/src/app/assignments/assignment-item/assignment-detail/assignment-detail.component.html
@@ -56,12 +56,13 @@
     <div class="card-footer">
       <form #messageForm="ngForm" (ngSubmit)="messageForm.valid && sendMessage()">
         <div class="input-group">
-          <textarea type="textarea"
+          <input type="text"
           [(ngModel)]="newMessage.content"
+          autocomplete="off"
           name="content"
           required
           class="form-control input-sm"
-          placeholder="send a private message"></textarea>
+          placeholder="send a private message">
           <div class="input-group-append">
             <button class="btn btn-primary" [disabled]="!messageForm.valid">Send</button>
           </div>
