Session Registration front end working

--- a/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/admin-landing/admin-landing.component.html
@@ -2,6 +2,9 @@
   <br>
   <div class="tab-header-list">
     <tabset class="admin-tabset" #adminTabs>
+      <tab heading="Sessions">
+        <app-sessions-tab></app-sessions-tab>
+      </tab>
       <tab heading="Events">
         <app-events-tab></app-events-tab>
       </tab>
