file uploader progress

--- a/Hammond-SPA/src/app/file-uploader/file-uploader.component.html
+++ b/Hammond-SPA/src/app/file-uploader/file-uploader.component.html
@@ -85,8 +85,10 @@
                         (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
                     <span class="fa fa-trash"></span> Remove
                 </button>
+                
             </div>
       
         </div>
-        <button (click)="test()">Test</button>
+       
+</div>
 </div>
