--- a/Hammond-SPA/src/app/admin/volunteers-tab/volunteers-tab.component.html
+++ b/Hammond-SPA/src/app/admin/volunteers-tab/volunteers-tab.component.html
@@ -1,10 +1,11 @@
 <div class="container">
     
-  <div *ngIf="!volunteerListMode && !volunteerRegisterMode">
+  <div *ngIf="!volunteerListMode && !volunteerRegisterMode && !dropBoxMode">
       <ul class="landing-content">
 
           <li class="menu-nav" [routerLink]="['/admin/volunteers']">View Volunteer List</li>
           <li class="menu-nav" (click)="registerToggle()">Register New Volunteer</li>
+          <li class="menu-nav" (click)="dropBoxToggle()">Upload Volunteer File</li>
       
         </ul>
   </div>
@@ -15,6 +16,18 @@
 
   <div *ngIf="volunteerListMode">
     <app-student-list (cancelList)="cancelVolunteerList($event)"></app-student-list>
+  </div>
+
+  <div *ngIf="dropBoxMode">
+    <app-file-uploader [roleToReg]="roleToReg" (cancelUploader)="cancelDropBox($event)"></app-file-uploader>
+    <!-- <app-student-dropbox (cancelDropBox)="cancelDropBox($event)"></app-student-dropbox> -->
+    <br>
+    <p>register as {{roleToReg}}</p>
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round" (click)="setVolunteerType()"></span>
+    </label>
+    
   </div>
 
   
