--- a/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
@@ -5,12 +5,19 @@
     <tabset class="mentor-tabset" #mentorTabs>
       <tab heading="Next Session">
         <br>
-        <h5>Next Session is on {{session.dayOfSession | date: 'mediumDate'}}</h5>
-        <div *ngFor="let item of session.sessionAssignments">
-          <div class="card row" [routerLink]="['/mentor/assignments', item.assignmentId]">
-            <div class="container">
-              <div class="card-body">
-                <h6>{{item.assigment.title}}</h6>
+
+        <div *ngIf="!session">
+         <h5>No Session Has Been Created Yet</h5>
+        </div>
+
+        <div *ngIf="session">
+          <h5>Next Session is on {{session.dayOfSession | date: 'mediumDate'}}</h5>
+          <div *ngFor="let item of session.sessionAssignments">
+            <div class="card row" [routerLink]="['/mentor/assignments', item.assignmentId]">
+              <div class="container">
+                <div class="card-body">
+                  <h6>{{item.assigment.title}}</h6>
+                </div>
               </div>
             </div>
           </div>
