grouped users don't reappear when page changed

--- a/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
+++ b/Hammond-SPA/src/app/admin/registrations/group-registration/group-registration.component.html
@@ -31,7 +31,7 @@
         <ul style="list-style-type: none;">
           <div class="" *ngFor="let user of mentors">
               <div class="card" *ngIf="user.userRoles[0].role.name == 'Mentor' &&
-              user.userRoles[0].user.userGroups.length < 1 && !user.grouped">
+              user.userRoles[0].user.userGroups.length < 1 && !user.grouped && user.grouped != true">
                 <li class="card-body" (click)="groupUser(user)">
                   {{user.lastName}}, {{user.firstName}}
                   <i class="fa fa-plus-circle"></i>
@@ -71,7 +71,7 @@
         <ul style="list-style-type: none;">
             <div *ngFor="let user of students">
               <div class="card" *ngIf="!user.grouped &&
-               user.userRoles[0].user.userGroups.length < 1 && !user.grouped">
+               user.userRoles[0].user.userGroups.length < 1 && user.grouped != true">
                 <li class="card-body" (click)="groupUser(user)">
                   {{user.lastName}}, {{user.firstName}}
                   <i class="fa fa-plus-circle"></i>
