--- a/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
+++ b/Hammond-SPA/src/app/landingpages/mentor-landing/mentor-landing.component.html
@@ -42,7 +42,7 @@
       <tab heading="Assignments">
         <br>
           <div *ngFor="let assignment of assignments">
-            <div class="card row" [routerLink]="['/mentor/assignments', assignment.id]">
+            <div class="card row" [routerLink]="['/mentor', user.id, 'assignments', assignment.id]">
               <div class="container">
                 <div class="card-body">
                   <h4>{{assignment.title}}</h4>
