--- a/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
+++ b/Hammond-SPA/src/app/admin/assignment-edit/assignment-edit.component.html
@@ -75,6 +75,31 @@
       </label>
     </div>
 
+    <div class="form-group col-md-5" *ngIf="editForm.value.section == 'tutor'">
+      <label style="margin-right: 10px;" class="control-label">Subject:  </label>
+      <br>
+      <label class="radio-inline">
+        <input type="radio" class="mr-1" value="actscience" formControlName="subject"
+        [checked]="assignment.subject=='actscience' ? true: false"
+        [ngModel]="assignment.subject"
+        >ACT Science
+      </label>
+      <br>
+      <label class="radio-inline">
+        <input type="radio" class="mr-1" value="actmath" formControlName="subject"
+        [checked]="assignment.subject=='actmath' ? true: false"
+        [ngModel]="assignment.subject"
+        >ACT Math
+      </label>
+      <br>
+      <label class="radio-inline">
+        <input type="radio" class="mr-1" value="wact" formControlName="subject"
+        [checked]="assignment.subject=='wact' ? true: false"
+        [ngModel]="assignment.subject"
+        >Writing and Critical Thinking
+      </label>
+    </div>
+
     <div class="form-group">
       <input [ngClass]="{'is-invalid': editForm.get('dateDue').errors
         && editForm.get('dateDue').touched}" class="form-control"
